# ufo-files-embeddings

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md
notebooks/: controller_demo.ipynb
pdf_embedding_analysis/: __init__.py  chunking.py  controller.py  corpus.py  embedding.py  pdf_io.py  storage.py  tsne_step.py  types.py  visualization.py
