[tool.poetry]
name = "aweeumz"
version = "0.1.0"
description = "PDF indexing, embeddings, t-SNE exploration"
authors = []
readme = "README.md"
packages = [{ include = "pdf_embedding_analysis" }]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
scikit-learn = "^1.4.0"
numpy = "^2.1.0"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
fastembed = "^0.7.0"
pymupdf = "^1.24.0"
tiktoken = "^0.7.0"
plotly = "^5.22.0"
scipy = "^1.13.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
types-tqdm = "^4.66.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
packages = ["pdf_embedding_analysis"]

[[tool.mypy.overrides]]
module = [
    "fitz",
    "langchain_community.*",
    "langchain.*",
    "plotly.*",
    "sklearn.*",
    "tiktoken.*",
]
ignore_missing_imports = true
